--- a/src/app/modules/blog/blog/blog.component.html
+++ b/src/app/modules/blog/blog/blog.component.html
@@ -7,7 +7,7 @@
                 <div>
                     <h2 class="center">From our partners...</h2>
                 </div>
-                <div class="center"><a routerLink="" class="demo-button">Get in touch</a></div>
+                <div class="center"><a routerLink="/contact-us" class="demo-button">Get in touch</a></div>
             </div>
             <div class="section1">
                     <div *ngFor="let article of blogs" class="card1">
