--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -10,43 +10,43 @@
                     interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our
                     solutions empower students to learn at their own pace, in their own style.
                 </p>
-                <a routerLink="" class="demo-button">Find gifts</a>
+                <a routerLink="/coming-soon" class="demo-button">Find gifts</a>
             </div>
-            <img src="/assets/otherstudents.jpg" alt="" class="hero-image" srcset="">
+            <img [lazyLoad]="'/assets/otherstudents.jpg'" loading="lazy" alt="A woman in n online meeting" class="hero-image" srcset="">
         </div>
     </header>
     <div class="options">
-        <a routerLink="">
+        <a routerLink="/guides">
             <div class="option1">
                 <ng-icon class="icons" name="heroArrowDown"></ng-icon>
                 <p>Downloads</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/case-study">
             <div class="option1">
                 <ng-icon class="icons" name="heroStar"></ng-icon>
                 <p>Certifications</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/events">
             <div class="option1">
                 <ng-icon class="icons" name="heroDocumentCheck"></ng-icon>
                 <p>Validated</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/reference-design">
             <div class="option1">
                 <ng-icon class="icons" name="heroHomeModern"></ng-icon>
                 <p>Training</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/events">
             <div class="option1">
                 <ng-icon class="icons" name="heroUserGroup"></ng-icon>
                 <p>Community</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/careers">
             <div class="option1">
                 <ng-icon class="icons" name="heroBriefcase"></ng-icon>
                 <p>Careers</p>
@@ -72,7 +72,7 @@
                         younger learners who learn best through interaction and play.</p>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Dicover more ></a>
+                    <a routerLink="/AV-room-design" class="width: 90%; padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     </p>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class=" width: 90%;">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                         visual demonstrations to asssist in understanding.</p>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/digital-signage" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -108,7 +108,6 @@
     </div>
     <div class="flex1">
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
@@ -119,7 +118,7 @@
                 to asssist in understanding.</p>
                 <a routerLink="" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/contact-us" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
@@ -133,17 +132,15 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
                 <a routerLink="" class="demo-button">Read report</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
+                    <a routerLink="/guides" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
                 </div>
 
         </div>
         <div class="images flex1-words-p images-back2">
-            <img src="" alt="" srcset="">
         </div>
     </div>
     <div class="flex1">
         <div class="images images-back3">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
