--- a/src/app/modules/solutions/government/government.component.html
+++ b/src/app/modules/solutions/government/government.component.html
@@ -9,8 +9,7 @@
                         <p class="hero-p2 header-p pt-2">
                             Proscene has a long history of working with local, state, and federal government departments and agencies. Our experienced teams understand your need for secure solutions and procurement proposals and procedures.
                         </p>
-                       
-                <a routerLink="" class="demo-button">Discover solutions</a>
+                <a routerLink="/contact-us" class="demo-button">Discover solutions</a>
             </div>
             <img src="https://website2021-live-e3e78fbbd3cc41f2847799-7c49c59.divio-media.com/filer_public_thumbnails/filer_public/30/eb/30eb9913-5b2a-4ac7-9a8f-51d12bf11392/meeting-moderation.png__1200x630_q90_crop_subject_location-420%2C304_subsampling-2_upscale.png" alt="" class="hero-image" srcset="">
         </div>
@@ -31,7 +30,6 @@
     
     <div class="flex1">
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
@@ -60,44 +58,41 @@
 
         </div>
         <div class="images flex1-words-p images-back2">
-            <img src="" alt="" srcset="">
         </div>
     </div>
     <div class="partner-section">
         <h3 class="h2-offers center pt-3 pb-4">We partner with leading collaboration providers
         </h3>
-        <div class="partner-images pb-9">
-            <div class="container-p-img">
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
+        <div class="container-p-img">
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/cisco.png'" loading="lazy" alt="cisco logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/CRESTRON.png'" loading="lazy" alt="creston logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/Extron.png'" loading="lazy" alt="Extron logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/Google.png'" loading="lazy" alt="Google logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/logitech.png'" loading="lazy" alt="logitech logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/Microsof.png'" loading="lazy" alt="Microsoft logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/neat.png'" loading="lazy" alt="neat logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/Zoom.png'" loading="lazy" alt="Zoom logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img [lazyLoad]="'./assets/partners/Poly.png'" loading="lazy" alt="Poly logo" srcset="" class="w-100 partner-icon">
+            </div>
+            <div class="center pt-7 pb-7">
+                <img  [lazyLoad]="'./assets/partners/QSYS.png'" loading="lazy" alt="QSYS logo" srcset="" class="w-100 partner-icon">
             </div>
         </div>
     </div>
@@ -284,7 +279,6 @@
     </div>
     <div class="flex1">
         <div class="images images-back3">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
