--- a/src/app/modules/solutions/law/law.component.html
+++ b/src/app/modules/solutions/law/law.component.html
@@ -9,12 +9,11 @@
                 </p>
                 <a routerLink="" class="demo-button">Explore</a>
             </div>
-            <img src="https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg" alt="" class="hero-image" srcset="">
+            <img [lazyLoad]="'https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg'" loading="lazy" alt="law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration" class="hero-image" srcset="">
         </div>
     </header>
     <div class="flex1">
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
@@ -72,12 +71,10 @@
 
             </div>
             <div class="images images-back11">
-                <img src="" alt="" srcset="">
             </div>
         </div>
         <div class="flex1 law-center">
             <div class="images images-back2">
-                <img src="" alt="" srcset="">
             </div>
 
             <div class="flex1-words flex1-words-p law-center">
@@ -101,7 +98,6 @@
 
             </div>
             <div class="images images-back11 law-center">
-                <img src="" alt="" srcset="">
             </div>
         </div>
         <div class="pb-9 center"><a routerLink="/contact-us" class="demo-button">Contact us </a></div>
@@ -111,7 +107,6 @@
             </h2> 
             <div class="flex1 law-center">
                 <div class="images images-back2">
-                    <img src="" alt="" srcset="">
                 </div>
     
                 <div class="flex1-words flex1-words-p law-center">
@@ -168,34 +163,34 @@
             <div class="partner-images pb-9">
                 <div class="container-p-img">
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/cisco.png'" loading="lazy" alt="cisco logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/CRESTRON.png'" loading="lazy" alt="creston logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/Extron.png'" loading="lazy" alt="Extron logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/Google.png'" loading="lazy" alt="Google logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/logitech.png'" loading="lazy" alt="logitech logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/Microsof.png'" loading="lazy" alt="Microsoft logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/neat.png'" loading="lazy" alt="neat logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/Zoom.png'" loading="lazy" alt="Zoom logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img [lazyLoad]="'./assets/partners/Poly.png'" loading="lazy" alt="Poly logo" srcset="" class="w-100 partner-icon">
                     </div>
                     <div class="center pt-7 pb-7">
-                        <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                        <img  [lazyLoad]="'./assets/partners/QSYS.png'" loading="lazy" alt="QSYS logo" srcset="" class="w-100 partner-icon">
                     </div>
                 </div>
             </div>
