--- a/src/app/modules/solutions/law/law.component.scss
+++ b/src/app/modules/solutions/law/law.component.scss
@@ -2,6 +2,8 @@
 .hero{
     position: relative;
     height: 100vh;
+    height: 100%;
+    padding-bottom: 3rem;
 }
 .header-p{
     color: $the-blue !important;
