--- a/src/app/modules/solutions/meetings/meetings.component.html
+++ b/src/app/modules/solutions/meetings/meetings.component.html
@@ -15,7 +15,7 @@
                         <h5 class="hero-p pb-7">Proscene is ready to support your digital transformation strategy and improve team collaboration with solutions from leaders like <a href="">Microsoft</a>, <a href="">Cisco</a>, <a href="">Zoom</a>, <a href="">Poly</a>, <a href="">Neat</a>, <a href="">Logitech</a></h5>
                 <a routerLink="" class="demo-button">Discover solutions</a>
             </div>
-            <img src="https://website2021-live-e3e78fbbd3cc41f2847799-7c49c59.divio-media.com/filer_public_thumbnails/filer_public/30/eb/30eb9913-5b2a-4ac7-9a8f-51d12bf11392/meeting-moderation.png__1200x630_q90_crop_subject_location-420%2C304_subsampling-2_upscale.png" alt="" class="hero-image" srcset="">
+            <img [lazyLoad]="'https://website2021-live-e3e78fbbd3cc41f2847799-7c49c59.divio-media.com/filer_public_thumbnails/filer_public/30/eb/30eb9913-5b2a-4ac7-9a8f-51d12bf11392/meeting-moderation.png__1200x630_q90_crop_subject_location-420%2C304_subsampling-2_upscale.png'" loading="lazy" alt="cisco logo" class="hero-image" srcset="">
         </div>
     </header>
     <div class="partner-section">
@@ -24,34 +24,34 @@
         <div class="partner-images pb-9">
             <div class="container-p-img">
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/cisco.png'" loading="lazy" alt="cisco logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/CRESTRON.png'" loading="lazy" alt="creston logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Extron.png'" loading="lazy" alt="Extron logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Google.png'" loading="lazy" alt="Google logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/logitech.png'" loading="lazy" alt="logitech logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Microsof.png'" loading="lazy" alt="Microsoft logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/neat.png'" loading="lazy" alt="neat logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Zoom.png'" loading="lazy" alt="Zoom logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Poly.png'" loading="lazy" alt="Poly logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img  [lazyLoad]="'./assets/partners/QSYS.png'" loading="lazy" alt="QSYS logo" srcset="" class="w-100 partner-icon">
                 </div>
             </div>
         </div>
@@ -85,7 +85,6 @@
 
         </div>
         <div class="images flex1-words-p images-back2">
-            <img src="" alt="" srcset="">
         </div>
     </div>
     <div class="options">
@@ -124,10 +123,6 @@
     </div>
     <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">UCC provides frictionless collaboration from anywhere at any time, using any device
     </p>
-
-    
-    
-    
     <div class="offers">
         <h2 class="h2-offers text-center">
             AV integration for video meeting rooms, real and virtual
@@ -289,7 +284,6 @@
     </div>
     <div class="flex1">
         <div class="images images-back3">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
