--- a/src/app/modules/services/collaboration-as-a-service/collaboration-as-a-service.component.html
+++ b/src/app/modules/services/collaboration-as-a-service/collaboration-as-a-service.component.html
@@ -2,7 +2,7 @@
 <main class="switcher wrapper">
     <div class="main">
         <div class="decorative-image center">
-<img src="/assets/collaboration.avif" alt="" srcset="" class="p-3">
+<img [lazyLoad]="'assets/collaboration.avif'" loading="lazy" alt="collaboration image" srcset="" class="p-3">
         </div>
 
         <div class="words">
@@ -148,34 +148,34 @@
     <div class="partner-images pb-9">
         <div class="container-p-img">
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/cisco.png'" loading="lazy" alt="cisco logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/CRESTRON.png'" loading="lazy" alt="creston logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/Extron.png'" loading="lazy" alt="Extron logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/Google.png'" loading="lazy" alt="Google logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/logitech.png'" loading="lazy" alt="logitech logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/Microsof.png'" loading="lazy" alt="Microsoft logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/neat.png'" loading="lazy" alt="neat logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/Zoom.png'" loading="lazy" alt="Zoom logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                <img [lazyLoad]="'./assets/partners/Poly.png'" loading="lazy" alt="Poly logo" srcset="" class="w-100 partner-icon">
             </div>
             <div class="center pt-7 pb-7">
-                <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                <img  [lazyLoad]="'./assets/partners/QSYS.png'" loading="lazy" alt="QSYS logo" srcset="" class="w-100 partner-icon">
             </div>
         </div>
     </div>
