--- a/src/app/modules/services/support-countrywide/support-countrywide.component.html
+++ b/src/app/modules/services/support-countrywide/support-countrywide.component.html
@@ -2,7 +2,7 @@
 <main class="switcher wrapper">
     <div class="main">
         <div class="decorative-image center">
-            <img src="/assets/maintain.avif" alt="" srcset="" class="p-3">
+            <img [lazyLoad]="'/assets/maintain.avif'" loading="lazy" alt="A picture showing maintainance of an electronic devices" srcset="" class="p-3">
         </div>
 
         <div class="words">
@@ -47,7 +47,6 @@
             </div>
         </div>
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
     </div>
 </div>
