--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             </li>
 
             <li class="dropdown">
-                <a class="dropbtn chevron" (click)="toggleDropdown($event)">
+                <a class="dropbtn chevron" (click)="toggleDropdown($event)" routerLink="">
                     <span aria-hidden="true"></span>Solutions <ng-icon name="heroChevronDown"></ng-icon>
                 </a>
                 <div class="dropdown-content">
