--- a/src/app/modules/solutions/digital/digital.component.html
+++ b/src/app/modules/solutions/digital/digital.component.html
@@ -11,7 +11,7 @@
                 </p>
                 <a routerLink="" class="demo-button">Explore</a>
             </div>
-            <img src="/assets/Digital.jpg" alt="" class="hero-image" srcset="">
+            <img [lazyLoad]="'/assets/Digital.jpg'" loading="lazy" alt="Digital walls and signage" class="hero-image" srcset="">
         </div>
     </header>
     <div class="picturesdigital">
@@ -63,7 +63,6 @@
 
         <div class="flex1">
             <div class="images images-back1">
-                <img src="" alt="" srcset="">
             </div>
             <div class="flex1-words flex1-words-p">
                 <h2 class="h2-offers">
@@ -108,12 +107,10 @@
 
             </div>
             <div class="images images-back11">
-                <img src="" alt="" srcset="">
             </div>
         </div>
         <div class="flex1">
             <div class="images images-back2">
-                <img src="" alt="" srcset="">
             </div>
 
             <div class="flex1-words flex1-words-p">
@@ -201,7 +198,6 @@
         </div>
         <div class="flex1">
             <div class="images images-back3">
-                <img src="" alt="" srcset="">
             </div>
             <div class="flex1-words flex1-words-p">
                 <h2 class="h2-offers">
