--- a/src/app/modules/solutions/education/education.component.scss
+++ b/src/app/modules/solutions/education/education.component.scss
@@ -2,37 +2,11 @@
 .hero{
     position: relative;
     height: 100vh;
+    height: 100%;
+    padding-bottom: 3rem;
 }
-.hero-title{
-    font-weight: 700;
-    font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
-    text-transform: capitalize;
-    color: $the-blue;
-    padding-top: 2em;
-    z-index: 2;
-    position: relative;
-}
-.hero-p{
-    color: $the-blue;
-    line-height: 1;
-    font-weight: 900;
-    z-index: 2;
-    position: relative;
-}
-.hero-image{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    left: 0;
-    top: 0;
-    right: 0;
-    -webkit-mask-image: linear-gradient( black transparent);
-    mask-image: linear-gradient( black,  transparent);
-}
-.container-words{
-    padding-inline: 2em;
-    z-index: 2;
+.hero-p2{
+    color: $the-blue !important;
 }
 .icons{
     font-size: 30px;
@@ -54,19 +28,6 @@ justify-content: center;
         font-weight: 600;
         color: rgb(51, 49, 49);
     }
-}
-.hero-p2{
-    font-weight: 500;
-    color: #0a0a22;
-    padding-bottom: 2em;
-    position: relative;
-    z-index: 9999;
-}
-.h2-offers{
-    padding-top: 1em;
-    font-size: clamp(1rem, 10vw + 0.5rem, 2rem);
-    color: #0a0a22;
-    font-weight: 600;
 }
 .offers-p{
     font-size: clamp(1rem, 5vw + 0.5rem, 1.1rem) ;
@@ -145,6 +106,9 @@ h5{
     }
 }
 @media (min-width:35em) and (max-width:59em) {
+    .hero{
+        padding-bottom: 6rem;
+    }
     .solutions{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -157,6 +121,9 @@ h5{
 }
 
 @media (min-width:60em) {
+    .hero{
+        padding-bottom: 7rem;
+    }
     .hero-image{
     -webkit-mask-image: linear-gradient(to left, black, black 10%, transparent);
     mask-image: linear-gradient(to left, black, black 10%, transparent);     
@@ -166,6 +133,7 @@ h5{
     }
     .hero-p2{
         padding-bottom: 2em;
+        color: $the-blue !important;
     }
     .h2-offers{
         padding-top: 1em;
