--- a/src/app/modules/solutions/unified/unified.component.html
+++ b/src/app/modules/solutions/unified/unified.component.html
@@ -10,7 +10,7 @@
                 <h5 class="hero-p pb-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
                 <a routerLink="" class="demo-button">Find gifts</a>
             </div>
-            <img src="/assets/960x0.webp" alt="" class="hero-image" srcset="">
+            <img [lazyLoad]="'/assets/960x0.webp'" loading="lazy" alt="A woman Holding a tablet" alt="" class="hero-image" srcset="">
         </div>
     </header>
     <div class="options">
@@ -57,7 +57,6 @@
 
     <div class="flex1">
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
@@ -76,34 +75,34 @@
         <div class="partner-images pb-9">
             <div class="container-p-img">
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/cisco.png'" loading="lazy" alt="cisco logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/CRESTRON.png'" loading="lazy" alt="creston logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Extron.png'" loading="lazy" alt="Extron logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Google.png'" loading="lazy" alt="Google logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/logitech.png'" loading="lazy" alt="logitech logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Microsof.png'" loading="lazy" alt="Microsoft logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/neat.png'" loading="lazy" alt="neat logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Zoom.png'" loading="lazy" alt="Zoom logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img [lazyLoad]="'./assets/partners/Poly.png'" loading="lazy" alt="Poly logo" srcset="" class="w-100 partner-icon">
                 </div>
                 <div class="center pt-7 pb-7">
-                    <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                    <img  [lazyLoad]="'./assets/partners/QSYS.png'" loading="lazy" alt="QSYS logo" srcset="" class="w-100 partner-icon">
                 </div>
             </div>
         </div>
@@ -285,7 +284,6 @@
     </div>
     <div class="flex1">
         <div class="images images-back3">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
