--- a/src/app/modules/shared/contactform/contactform.component.html
+++ b/src/app/modules/shared/contactform/contactform.component.html
@@ -1,11 +1,12 @@
+
 <main class="main">
   <div>
     <h2 class="sub-container-h2 pl-9 pb-9" style="color: white;">Talk to a sales expert</h2>
     <div class="login-main-container">
         <div class="form-container">
-          <form class="form" [formGroup]="passwordForm" (ngSubmit)="submit()">
+          <form class="form" [formGroup]="form" (ngSubmit)="send()">
               <label for="">Your Name</label>
-              <input type="text" formControlName="name" id="Yourname" />
+              <input type="text" formControlName="from_name" id="Yourname" />
               <div
                 *ngIf="f['name'].touched && f['name'].invalid"
                 class="alert alert-danger"
@@ -18,7 +19,7 @@
                 </div>
               </div>
               <label for="">Your email</label>
-              <input type="email" name="" id="" formControlName="email" />
+              <input type="email" name="" id="" formControlName="from_email" />
               <div
                 *ngIf="f['email'].touched && f['email'].invalid"
                 class="alert alert-danger"
@@ -32,7 +33,7 @@
                 </div>
               </div>
               <label for="">Your Phone number</label>
-              <input type="number" name="" id="" formControlName="phonenumber" />
+              <input type="number" name="" id="" formControlName="pnonenumber" />
               <div
                 *ngIf="f['phonenumber'].touched && f['phonenumber'].invalid"
                 class="alert alert-danger"
@@ -46,7 +47,7 @@
                 </div>
               </div>
               <label for="">What can we do for you today?</label>
-              <input type="text" name="name" id="" formControlName="" />
+              <input type="text" name="name" id="" formControlName="subject" />
               <div
                 *ngIf="f['name'].touched && f['name'].invalid"
                 class="alert alert-danger"
@@ -56,7 +57,7 @@
                 </div>
               </div>
               <label for="">Would you like a callback?</label>
-              <input type="text" name="name" id="" formControlName="" />
+              <input type="text" name="name" id="" formControlName="message" />
               <div
                 *ngIf="f['name'].touched && f['name'].invalid"
                 class="alert alert-danger"
@@ -65,6 +66,7 @@
                   answer is required
                 </div>
               </div>
+              <!-- {{form.value | json}} -->
             <button type="submit">submit</button>
           </form>
         </div>
